# coin_flip

./: README.md  pyproject.toml  requirements.txt
src/coin_flip/: main.py
src/coin_flip/style/: coin_flip.tcss
src/coin_flip/widgets/: coin.py  coin_app.py
